--- a/react/index.html
+++ b/react/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@700&family=Ropa+Sans&family=Sawarabi+Mincho&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 
-    <title>Vitor - Photo Portfolio</title>
+    <title>Vitor - Portfólio de Fotos</title>
   </head>
   <body>
     <div id="root"></div>
