--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@700&family=Ropa+Sans&family=Sawarabi+Mincho&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Rokkitt:wght@700&family=Ropa+Sans&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 
     <title>Vitor - Portfólio de Fotos</title>
   </head>
