feat(admin): added album editing features

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Rokkitt:wght@700&family=Ropa+Sans&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 
-    <title>Vitor - Portfólio de Fotos</title>
+    <title>Bruno - Portfólio de Fotos</title>
   </head>
   <body>
     <div id="root"></div>
